--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yamdbf-league",
   "version": "1.0.0",
-  "description": "YAMDBF plugin that allows users to see their and others League of Legends profiles.",
+  "description": "YAMDBF plugin that allows users to see their and other League of Legends champion masteries.",
   "main": "bin/index",
   "typings": "bin/index.d.ts",
   "scripts": {
