--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yamdbf-league",
-  "version": "1.1.1",
+  "version": "2.0.0",
   "description": "YAMDBF plugin that allows users to see their and other League of Legends champion masteries.",
   "main": "bin/index",
   "typings": "bin/index.d.ts",
@@ -33,11 +33,11 @@
     "@types/node": "^8.0.25",
     "@types/snekfetch": "^3.1.0",
     "del": "^3.0.0",
-    "discord.js": "github:hydrabolt/discord.js#11.1-dev",
+    "discord.js": "github:zajrik/discord.js#11.1-dev",
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-typescript": "^3.2.2",
-    "tslint": "^5.6.0",
+    "tslint": "^5.7.0",
     "typescript": "^2.5.1",
     "yamdbf": "github:zajrik/yamdbf"
   },
